--- a/p.html
+++ b/p.html
@@ -20,6 +20,12 @@ h1 {
 	text-align: center;
 }
 
+#beef {
+	
+	color: white;
+	background-color: yellow;
+}
+
 div#container {
 	background-color: grey;
 	border: 2px solid black;
@@ -30,11 +36,9 @@ div#container {
 	overflow: hidden;
 }
 
-#box {
-
-}
 
 #content {
+    font-family: Berlin Sans FB;
 	margin-top: 40px;
 	padding-left: 10px;
 	padding-right: 10px;
@@ -49,15 +53,14 @@ p {
 }
 
 #p1 {
+    font-family: Berlin Sans FB;
 	width: 130px;
 	height: 30px;
 	font-weight: bold;
-
 	position: absolute;
 	top: 0;
 	right: 0;
 }
-
 
 .row {
 	width: 100%;
@@ -101,32 +104,31 @@ p {
 </style>
 </head>
 <body>
-<h1>La-la-la</h1>
-
+<h1>Our Menu</h1>
 <div class="row">
 	<div class="col-lg-1 col-md-2">
 		<div id="container">
 			<div id="box">
-				<div id="content">La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1 La-la 1
+				<div id="content">lorem ipsum  dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrub exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 				</div>
-				<p id="p1" style="background-color: pink">La-la 1</p>
+				<p id="p1" style="background-color: pink">Chicken</p>
 			</div>			
 		</div>
 	</div>
 	<div class="col-lg-1 col-md-2">
 		<div id="container"
 			<div id="box">
-				<div id="content">La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2 La-la 2
+				<div id="content"> lorem ipsum  dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrub exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 				</div>
-				<p id="p1" style="background-color: red">La-la 2</p>
+				<p id="p1" style="background-color: red; color: white">Beef</p>
 			</div>	
 		</div>
 	<div class="col-lg-1 col-md-3">
 	<div id="container"
 		<div id="box">
-			<div id="content">La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3 La-la 3
+			<div id="content">lorem ipsum  dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrub exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 			</div>
-			<p id="p1" style="background-color: yellow">La-la 3</p>
+			<p id="p1" style="background-color: yellow">Sushi</p>
 		</div>	
 	</div>
 </div>	
